@@ -1,5 +1,9 @@
 2002-02-10  Richard Hestilow  <hestilow@ximian.com>
 
+	* gnome-ui-properties.c (main): Create changeset.
+
+2002-02-10  Richard Hestilow  <hestilow@ximian.com>
+
 	* Make dialog Apply/Close.
 
 2002-02-04  Lauris Kaplinski  <lauris@ximian.com>
